<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="click_see_list">点击进入列表展示界面</string>
    <string name="click_see_share">点击通过twitter／邮件／短信分享</string>
    <string name="ageorheight_error_title">身高或年龄设置错误</string>
    <string name="click_to_harambaby">点击进入抱婴模式</string>
    <string name="click_see_data">点击查看数据趋势图</string>
    <string name="waring_title">提醒</string>
    <string name="yeyu_waring_title">业余运动员：一个星期专业运动锻炼少于5天或等于五天的人。</string>
    <string name="putong_waring_title">普通人：一个星期运动锻炼少于或等于2天的人。</string>
    <string name="zhuanye_waring_title">专业运动员：每天都在进行专业运动锻炼的人。</string>
    <string name="list_see_data">点击进入列表展示界面</string>
    <string name="share_see_data">点击通过twitter／邮件／短信分享</string>
    <string name="feed_back">意见反馈</string>
    <string name="email_subject">用户反馈</string>
    <string name="email_type">请选择</string>
    <string name="kitchen_list_see_data">点击进入列表展示界面</string>
    <string name="keep_on_scale_waring">请打开手机蓝牙以后，光脚上秤，并保持脚底湿润.</string>
    <string name="back_name">返回</string>
    <string name="back_name_mark">&lt; 返回</string>
    <string name="app_name">健康管理专家</string>
    <string name="bmi_title">BMI</string>
    <string name="thin">瘦</string>
    <string name="Healthy">健康</string>
    <string name="Fat">肥胖</string>
    <string name="Overweight">超重</string>
    <string name="Weightg_cloun">重量(g)</string>
    <string name="Weightml_cloun">重量(ml)</string>
    <string name="Weightkg_cloun">重量(kg)</string>
    <string name="Weightlboz_cloun">重量(lb:oz)</string>
    <string name="Weightlb_cloun">重量(lb)</string>
    <string name="Weightml2_cloun">重量(ml(牛奶))</string>
    <string name="Weightstlb_cloun">重量(st:lb)</string>
    <string name="Weightfloz_cloun">重量(fl:oz)</string>
    <string name="bone_cloun">骨骼(kg)</string>
    <string name="bodyfat_cloun">体脂肪(%)</string>
    <string name="muscle_cloun">肌肉含量(kg)</string>
    <string name="bodywater_cloun">体水分(%)</string>
    <string name="visceral_cloun">内脏脂肪</string>
    <string name="bmr_cloun">基础代谢率(kcal)</string>
    <string name="bmi_cloun">BMI</string>
    <string name="phsicalage_cloun">代谢年龄</string>
    <string name="bonekg_cloun">骨骼(kg)</string>
    <string name="bonelb_cloun">骨骼(lb)</string>
    <string name="bonestlb_cloun">骨骼(st:lb)</string>
    <string name="musclekg_cloun">肌肉含量(kg)</string>
    <string name="musclelb_cloun">肌肉含量(lb)</string>
    <string name="musclestlb_cloun">肌肉含量(st:lb)</string>
    <string name="female_btn">女性</string>
    <string name="male_btn">男性</string>
    <string name="Cancle_btn">取消</string>
    <string name="name_hint">请输入姓名16字元以內</string>
    <string name="height_hint">1.6&#8211;10</string>
    <string name="height2_hint">1.6&#8211;10</string>
    <string name="uaerage_hint">5&#8211;120</string>
    <string name="uaermonth_hint">1&#8211;12</string>
    <string name="exit_waring">确定要退出吗？</string>
    <string name="nodata_waring">无此用户数据</string>
    <string name="deleted_waring">确认要删除此用户全部数据吗?</string>
    <string name="delsucess_waring">删除成功!</string>
    <string name="deleteall_waring">确认要删除此用户全部数据吗?</string>
    <string name="newdate_alter">新信息 </string>
    <string name="saveorno_title">确认储存?</string>
    <string name="yes_btn">是</string>
    <string name="no_btn">否</string>
    <string name="ok_btn">确定</string>
    <string name="cancle_btn">取消</string>
    <string name="error_title">Err2</string>
    <string name="getdate_tutle">新数据接收中</string>
    <string name="recvivedate_title">数据已接收</string>
    <string name="photo_btn">图</string>
    <string name="sync_btn">Sync.</string>
    <string name="bmi1_title">BMI</string>
    <string name="name_title">名称</string>
    <string name="ordinary">一般人</string>
    <string name="amaeur">业余运动员</string>
    <string name="professional">专业运动员</string>
    <string name="bmr">基础代谢率</string>
    <string name="send">发送</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="bt_not_enabled_leaving">未启用蓝牙。离开蓝牙聊天.</string>
    <string name="name_error">姓名16字元以內</string>
    <string name="age_error_3">年龄必大于10</string>
    <string name="height_error">身高必须在100到220厘米之间</string>
    <string name="height_error_2">身高必须在3ft:3in到7ft:3in之间  </string>
    <string name="height_error_3">身高必须在30到220厘米之间 </string>
    <string name="height_error_4">身高必须在1ft:0in到7ft:3in之间</string>
    <string name="height_error_5">身高必须在100到225厘米之间</string>
    <string name="height_error_6">身高必须在3ft:3in到7ft:3in之间</string>
    <string name="age_error">请输入正确的年龄</string>
    <string name="age_error_2">年龄必须是在0岁到99岁之间</string>
    <string name="age_error_4">蓝牙无法连接\n身高或年龄设定错误\n 年龄:10-99 \n 身高:100-220cm \n 返回</string>
    <string name="age_error_6">蓝牙无法连接\n身高或年龄设定错误 \n 年龄:10-99 \n 身高:3ft:3in and 7ft:3in \n 返回</string>
    <string name="age_error_5">蓝牙无法连接\n身高或年龄设定错误 \n 年龄:1-99 \n 身高:30-220cm \n 返回</string>
    <string name="age_error_7">蓝牙无法连接\n身高或年龄设定错误 \n 年龄:1-99 \n 身高:1ft:0in and 7ft:3in \n 返回</string>
    <string name="data_error">数据异常</string>
    <string name="mesuefat">请保持站立在体重计上，取得测量值中...</string>
    <string name="scaleerror">此选择无法跟设备连接配对!</string>
    <string name="mesuefat_try">脂肪测试错误!</string>
    <string name="title_activity_get_fat_date_error">脂肪测试错误!</string>
    <string name="mesuefat__error">未能获得脂肪数据.</string>
    <string name="done">完成</string>
    <string name="hour">时</string>
    <string name="mins">分</string>
    <string name="seconds">秒</string>
    <string name="day_date">日</string>
    <string name="month_date">月</string>
    <string name="yeat_date">年</string>
    <string name="kg_danwei">kg</string>
    <string name="lb_danwei">lb</string>
    <string name="oz_danwei">st</string>
    <string name="stlb_danwei">st:lb</string>
    <string name="lboz_danwei">lb:oz</string>
    <string name="cm_danwei">cm</string>
    <string name="ftin_danwei">ft:in</string>
    <string name="info">信息</string>
    <string name="g_danwei">g</string>
    <string name="search">搜索</string>
    <string name="ml_danwei">ml</string>
    <string name="ml_danwei2">ml(牛奶)</string>
    <string name="oz_danwei2">fl:oz</string>
    <string name="scale_detecting">搜寻设备</string>
    <string name="detect_timeout_once_more">检测超时，再检测一次!</string>
    <string name="detect_timeout">没有发现设备，请按“返回”返回!</string>
    <string name="babyScacle_param_error">身高或年龄参数不符合婴儿的要求，请重置!</string>
    <string name="user_data_error">\n年龄：10-100\n身高：100-220cm\n返回</string>
    <string name="user_data_error_lb">\n年龄：10-99\n身高：3ft:3in-7ft:2in\n返回</string>
    <string name="scale_connection_success">请保持站立在设备上!</string>
    <string name="scale_keep_scale_work">请确认设备开启，正在搜寻中…</string>
    <string name="scale_measurement_error">脂肪测量错误，请重新秤重.</string>
    <string name="enable_bluetooth">请启用蓝牙.</string>
    <string name="select_record">请选择一个记录.</string>
    <string name="scale_paired_success">设备配对，请操作您的蓝牙设备!</string>
    <string name="scale_connect_state_connected">连接状态：连接</string>
    <string name="scale_connect_state_not_connected">连接状态：未连接</string>
    <string name="connect_state_connected">连接</string>
    <string name="connect_state_not_connected">未连接</string>
    <string name="scale_title">切换秤</string>
    <string name="setting_noSDCard">沒有SD卡!</string>
    <string name="setting_export_txt_succ">myrecords.txt 保存成功，请检查SD卡.</string>
    <string name="setting_export_createFile_fail">创建档案失败</string>
    <string name="setting_export_noRecord">没有记录保存.</string>
    <string name="setting_export_txt_file">TXT 档案</string>
    <string name="langue_setting_titie">語言</string>
    <string name="langue_chinese_titie">繁体中文</string>
    <string name="langue_english_titie">English</string>
    <string name="user_info_height_tip">身高必须在3ft:3in和7ft:3in之间</string>
    <string name="user_info_height_tip2">身高必须在1ft:0in和7ft:3in之间</string>
    <string name="user_info_level_need">请选择级别</string>
    <string name="user_select_need">选择用户!</string>
    <string name="user_info_name">姓名: </string>
    <string name="user_info_name_tip">请输入姓名</string>
    <string name="user_info_gender">性別: </string>
    <string name="user_info_unit">单位: </string>
    <string name="user_info_birthday">生日: </string>
    <string name="user_info_birthday_tip">选择你的生日</string>
    <string name="user_info_height">身高: </string>
    <string name="user_info_level">級別: </string>
    <string name="user_photo_take">拍照</string>
    <string name="user_photo_album">从照片图库</string>
    <string name="user_info_save_error">保存用户信息错误</string>
    <string name="user_info_save_success">保存用户信息成功</string>
    <string name="user_target_weight">目标体重</string>
    <string name="wight_kitchen_title">重量</string>
    <string name="scale_target_weight">目标体重:</string>
    <string name="scale_weight_compare">与上次体重相比:</string>
    <string name="scale_no_record">沒有記錄.</string>
    <string name="scale_body_water">体水分:</string>
    <string name="scale_body_fat">体脂肪:</string>
    <string name="scale_bone">骨骼:</string>
    <string name="scale_BMI">身体质量指数:</string>
    <string name="scale_visceral_fat">内脏脂肪:</string>
    <string name="scale_BMR">基础代谢率:</string>
    <string name="scale_muscle_mass">肌肉含量:</string>
    <string name="scale_metabolic_age">代谢年龄:</string>
    <string name="kitchen_water">碳水化合物:</string>
    <string name="kitchen_energ">能量:</string>
    <string name="kitchen_protein">蛋白质:</string>
    <string name="kitchen_lipid">脂肪:</string>
    <string name="kitchen_vitaminC">总维生素A:</string>
    <string name="kitchen_fiber">纤维:</string>
    <string name="kitchen_cholesterol">胆固醇:</string>
    <string name="kitchen_calcium">钙:</string>
    <string name="energ_cloun">能量(kcal)</string>
    <string name="Proteing_cloun">蛋白质(g)</string>
    <string name="Proteinlb_cloun">蛋白质(lb)</string>
    <string name="Proteinstlb_cloun">蛋白质(st:lb)</string>
    <string name="Lipidg_cloun">脂肪(g)</string>
    <string name="Lipidlb_cloun">脂肪(lb)</string>
    <string name="Lipidstlb_cloun">脂肪(st:lb)</string>
    <string name="Calciumg_cloun">钙(mg)</string>
    <string name="Calciumlb_cloun">钙(lb)</string>
    <string name="Calciumstlb_cloun">钙(st:lb)</string>
    <string name="Fiberg_cloun">纤维(g)</string>
    <string name="Fiberlb_cloun">纤维(lb)</string>
    <string name="Fiberstlb_cloun">纤维(st:lb)</string>
    <string name="Cholesterolg_cloun">胆固醇(mg)</string>
    <string name="Cholesterollb_cloun">胆固醇(lb)</string>
    <string name="Cholesterolstlb_cloun">胆固醇(st:lb)</string>
    <string name="Vitaming_cloun">总维生素A(mg)</string>
    <string name="Vitaminlb_cloun">总维生素A(lb)</string>
    <string name="Vitaminstlb_cloun">总维生素A(st:lb)</string>
    <string name="Carbohydrateg_cloun">碳水化合物(g)</string>
    <string name="Carbohydratelb_cloun">碳水化合物(lb)</string>
    <string name="Carbohydratestlb_cloun">碳水化合物(st:lb)</string>
    <string name="scale_change_title">重新扫描</string>
    <string name="scale_change_content">是否检测秤?</string>
    <string name="scale_record_graph">图</string>
    <string name="scale_record_list">清单</string>
    <string name="date_title">日期</string>
    <string name="wight_gr_title">体重</string>
    <string name="scale_setting_myInformation">我的信息</string>
    <string name="scale_setting_save_as">另存为</string>
    <string name="scale_setting_about">关于健康管理专家</string>
    <string name="record_save_title">注意</string>
    <string name="record_save_notice">确认储存?</string>
    <string name="scale_type_bobyFat">体脂秤</string>
    <string name="scale_type_bathroom">体重秤</string>
    <string name="scale_type_babyScale">婴儿秤</string>
    <string name="scale_type_kitchenScale">营养秤</string>
    <string name="NDB_No_excel_title">姓名</string>
    <string name="Energ_excel_title">能量(kcal)</string>
    <string name="Protein_excel_title">蛋白质(g)</string>
    <string name="Lipid_excel_title">脂肪(g)</string>
    <string name="Carbohydrt_excel_title">糖</string>
    <string name="Fiber_excel_title">纤维</string>
    <string name="Calcium_excel_title">钙(mg)</string>
    <string name="Vit_C_excel_title">維C</string>
    <string name="Cholesterol_excel_title">胆固醇(mg)</string>
</resources>